--- a/actividad3/game-info.html
+++ b/actividad3/game-info.html
@@ -156,31 +156,37 @@
             </table>
             <table>
                 <tr>
-                    <th colspan="2">Game locations:</th>
+                    <th colspan="3">Game locations:</th>
                 </tr>
                 <tr>
                     <td>AJ Katzenmaier Elementary</td>
                     <td>24 W. Walton St., Chicago, IL 60610</td>
+                    <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.654246110985!2d-87.63123908512219!3d41.90029237922045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f6bac3%3A0x68a82e5d59952c86!2s24+W+Walton+St%2C+Chicago%2C+IL+60610%2C+EE.+UU.!5e0!3m2!1ses!2sar!4v1556573210558!5m2!1ses!2sar" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe></td>
                 </tr>
                 <tr>
                     <td>Greenbay Elementary</td>
                     <td>1734 N. Orleans St., Chicago, IL 60614</td>
+                    <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.0258843688575!2d-87.64002798512166!3d41.91380227921936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34073f306a3%3A0x9e1726bbf8f23f0e!2s1734+N+Orleans+St%2C+Chicago%2C+IL+60614%2C+EE.+UU.!5e0!3m2!1ses!2sar!4v1556573347935!5m2!1ses!2sar" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe></td>
                 </tr>
                 <tr>
                     <td>Howard A Yeager Elementary</td>
                     <td>2245 N. Southport Ave., Chicago, IL 60614</td>
+                    <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.585683085622!2d-87.66511458512127!3d41.923264579218575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd2e37f9b8d2d%3A0x62ad8b907dd755d6!2s2245+N+Southport+Ave%2C+Chicago%2C+IL+60614%2C+EE.+UU.!5e0!3m2!1ses!2sar!4v1556573386519!5m2!1ses!2sar" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe></td>
                 </tr>
                 <tr>
                     <td>Marjorie P Hart Elementary</td>
                     <td>2625 N. Orchard St., Chicago, IL 60614</td>
+                    <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2919146584295!2d-87.64808628512104!3d41.9295782792182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2630e551%3A0x3e719e44a5cef714!2s2625+N+Orchard+St%2C+Chicago%2C+IL+60614%2C+EE.+UU.!5e0!3m2!1ses!2sar!4v1556573452863!5m2!1ses!2sar" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe></td>
                 </tr>
                 <tr>
                     <td>North Elementary</td>
                     <td>1409 N. Ogden Ave., Chicago, IL 60610</td>
+                    <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.3377998492106!2d-87.64837698512193!3d41.907096479219916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd33af0e6ccc3%3A0x26c81c1d557667da!2s1409+N+Ogden+Ave%2C+Chicago%2C+IL+60610%2C+EE.+UU.!5e0!3m2!1ses!2sar!4v1556573501377!5m2!1ses!2sar" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe></td>
                 </tr>
                 <tr>
                     <td>South Elementary</td>
                     <td>2101 N. Fremont St., Chicago, IL 60614</td>
+                    <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.7479505250653!2d-87.6535553851214!3d41.91977677921895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3196fb41dc7%3A0x970be7f7d6336df5!2s2101+N+Fremont+St%2C+Chicago%2C+IL+60614%2C+EE.+UU.!5e0!3m2!1ses!2sar!4v1556573545722!5m2!1ses!2sar" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe></td>
                 </tr>
 
 
